# CompositesFEMesh

./: .gitignore  README.md  Windows_detailed_installation_instructions.txt
C++/: Jean2nd.inp
C++/GM_from_CT/: CMakeLists.txt
C++/GM_from_CT/src/: gridMod_from_CT.cpp
C++/gridModification/: CMakeLists.txt  README.md
C++/gridModification/include/: gridMod.h  mesh.h  parameters.h  utils.h
C++/gridModification/src/: gridMod.cpp
C++/odb2vtk/: .gitignore  CMakeLists.txt
C++/odb2vtk/Abaqus2txt_examples/: GetCellFields.py  GetCellFields_for_Sinan.py  Getdisplacement.py  get_multiple_frame.py
C++/odb2vtk/src/: odb2vtk.cpp
C++/shared_headers/: CTData.h  element.h  gridMod.h  gridTransformation.h  maillage.h  mesh.h  parameters.h  spline.h  utils.h  vector_tools.h  vertice.h
Csection_mesh/: .gitignore  Flat_composite_parameters.txt  c_spar_shell.py  main.py  mcmc_sim_1_2.py  mcmc_sim_3.py  node_element_extraction.py  parameters.txt  plot.py  update_nset.py  write_RVE_parameters.py  write_inp.py  write_laminate_delam_inp.py  write_laminate_inp.py  write_laminate_parameters.py  write_mesh.py  write_parameters.py  write_parameters_for_test_delam_function.py  write_ref_parameters.py  write_shell_inp.py  write_shell_inp_beam.py  write_shell_inp_beam2.py  write_shell_inp_multistep.py  write_shell_inp_translator.py  write_shell_inp_translator_hashin.py  write_shell_parameters.py  write_simple_laminate.py  write_wrinkle_param.py
Csection_mesh/Abaqus/: Csection_mesh.inp  Csection_ori.inp  Flat_mesh.inp  Flat_ori.inp
Csection_mesh/DUNE/: Csection.msh  Csection_ori.txt
Csection_mesh/utils/: coords.py  geometry.py  gmsh_hierarchy.py  lines.py  orientation.py  parameters.py  points.py
PYTHON/: main.py  write_inp.py  write_parameters.py
PYTHON/utils/: geometry.py  gmsh_hierarchy.py  parameters.py  surfaces.py
Stiffener_mesh/: main.py  parameters.txt  write_inp.py  write_parameters.py
Stiffener_mesh/utils/: coords.py  geometry.py  gmsh_hierarchy.py  lines.py  orientation.py  parameter.py  points.py  surfaces.py  wrinkles.py
